ffmpeg: enable multi-threaded decoding

Fixes #18874.

Change-Id: I24c74080fcc8280796af64624e0cdbf96cd57dc7
Reviewed-on: https://review.haiku-os.org/c/haiku/+/7586
Haiku-Format: Haiku-format Bot <no-reply+haikuformatbot@haiku-os.org>
Reviewed-by: waddlesplash <waddlesplash@gmail.com>